Fixed the wrapping issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,96 @@
+* {
+  box-sizing: border-box;
+}
 body {
-  /* background-color: blueviolet; */
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 50px 1fr 30px;
+  height: 100vh;
 }
-nav {
-  display: flex;
+h3 {
+  color: black;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  margin-left: 30px;
+}
+aside {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  background-color: rgb(226, 126, 89);
+  text-align: left;
+}
+aside ul {
+  list-style: none;
+  margin-right: 10px;
+}
+li a {
+  display: inline-block;
+  border: 1px solid black;
+  border-left: none;
+  border-right: none;
+  color: black;
+  font-family: inherit;
+  font-weight: bold;
+  text-decoration: none;
+  width: 140px;
+}
+aside li a:hover {
+  background-color: rgb(146, 146, 146);
+  background-size: fill;
+}
+
+.nav1 {
+  text-decoration: none;
 }
 header {
   display: flex;
   background-color: aquamarine;
+  grid-column: 2 / 6;
+  grid-row: 1 / 1;
   align-items: center;
   padding: 10px;
 }
+.btn {
+  padding: 2px 2px;
+}
+main {
+  background-color: pink;
+  grid-column: 2 / 6;
+  grid-row: 2 / 3;
+}
+.card {
+  width: 30%;
+  margin: 20px;
+  margin-top: 50px;
+}
+table {
+  margin: 3px;  
+}
+.card2 {
+  width: 30%;
+  margin: 20px;
+}
+.card3 {
+  width: 30%;
+  margin: 20px;
+}
+.graph {
+  margin: 20px;
+  flex-wrap: wrap;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+img {
+  width: 200px;
+}
 .icon {
   margin-left: auto;
+}
+footer {
+  grid-column: 1 / 6;
+  grid-row: 3 / 3;
+  background-color: grey;
+  text-align: center;
+  color: aquamarine;
 }
